overflow fix test

--- a/styles/_portfolio.scss
+++ b/styles/_portfolio.scss
@@ -35,6 +35,7 @@
       padding-left: 10px;
       @media screen and (max-width: 850px) {
         width: 100%;
+        padding-left: 0px;
         display: none;
       }
       img {
